--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "build": "remix build",
     "deploy": "fly deploy --remote-only",
     "dev": "remix dev",
-    "start": "remix-serve build",
+    "start": "netlify serve",
     "typecheck": "tsc"
   },
   "dependencies": {
     "@remix-run/css-bundle": "^1.17.1",
+    "@remix-run/netlify": "^1.18.0",
     "@remix-run/node": "^1.17.1",
     "@remix-run/react": "^1.17.1",
     "@remix-run/serve": "^1.17.1",
