--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@remix-run/node": "^1.17.1",
     "@remix-run/react": "^1.17.1",
     "@remix-run/serve": "^1.17.1",
+    "@remix-validated-form/with-zod": "^2.0.6",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remix-validated-form": "^5.0.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.17.1",
